# echo

./: .gitignore  Echo Design Plan.docx  README.md  complex_example.echo  echo_documentation.md  echolang  echolang.bat  index.html  language_specs.txt  my_source.neu  neura-lexer.py  neura_documentation.md  pyproject.toml  simple_example.echo  source.echo  source.neu
docs/: api.html  blog.html  community.html  examples.html  index.html  index.md  package-lock.json  package.json  style.css  tsconfig.json
docs-legacy/: api.html  blog.html  community.html  examples.html  index.html  style.css
echo-syntax-highlighter/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
examples/: add_two_numbers.echo  container_with_most_water.echo  divide_two_integers.echo  find_first_last_position.echo  find_first_occurrence.echo  first_missing_positive.echo  four_sum.echo  generate_parentheses.echo  group_anagrams.echo  integer_to_roman.echo  jump_game_ii.echo  language_feature_smoke.echo  letter_combinations_phone_number.echo  longest_common_prefix.echo  longest_palindromic_substring.echo  longest_substring_without_repeating.echo  longest_valid_parentheses.echo  median_two_sorted_arrays.echo  merge_k_sorted_lists.echo  merge_two_sorted_lists.echo  multiply_strings.echo  next_permutation.echo  palindrome_number.echo  permutations.echo  permutations_ii.echo  pow_x_n.echo  regular_expression_matching.echo  remove_duplicates_sorted_array.echo  remove_element.echo  remove_nth_from_end.echo  reverse_integer.echo  reverse_nodes_k_group.echo  (+16 more)
(+53 files in other folders)
