[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echolang"
version = "0.1.0"
description = "Echo programming language interpreter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["rich>=13.0.0"]
authors = [{ name = "Deekshith Poojary", email = "deekshithpoojary355@gmail.com" }]
maintainers = [{ name = "Deekshith Poojary" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Interpreters"
]

[project.urls]
Homepage = "https://deekshith-poojary98.github.io/echo/index.html"
Repository = "https://github.com/deekshith-poojary98/echo"

[project.scripts]
echo = "echo_cli:main"
echolang = "echo_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
  "echo_cli",
  "main",
  "echo_lexer",
  "echo_parser",
  "echo_interpreter"
]